Fix for dark mode text

--- a/assets/stylesheets/_global.scss
+++ b/assets/stylesheets/_global.scss
@@ -45,7 +45,7 @@
 
   /* Homepage text */
   #hero h2 {
-    color: $text-kinda-muted-color;
+    color: #dcdcdc;
   }
 
   #footer {
